tests/snapshots/dependencies__package_bin__pass__virtual_workspace_single_package_bin_target.snap
---
source: tests/dependencies.rs
expression: output
---
COMMAND:
dependencies
--package
package_bin_target
--bin
package_bin_target

STDERR:

STDOUT:
digraph {

    graph [
        label="package_bin_target",
        labelloc=t,

        pad=0.4,

        // Consider rendering the graph using a different layout algorithm, such as:
        // [dot, neato, twopi, circo, fdp, sfdp]
        layout=neato,
        overlap=false,
        splines="line",
        rankdir=LR,

        fontname="Helvetica", 
        fontsize="36",
    ];

    node [
        fontname="monospace",
        fontsize="10",
        shape="record",
        style="filled",
    ];

    edge [
        fontname="monospace",
        fontsize="10",
    ];

    "package_bin_target" [label="crate|package_bin_target", fillcolor="#5397c8"]; // "crate" node
    "package_bin_target::main" [label="pub(crate) fn|package_bin_target::main", fillcolor="#f8c04c"]; // "fn" node

    "package_bin_target" -> "package_bin_target::main" [label="owns", color="#000000", style="solid"] [constraint=true]; // "owns" edge

}
